solved css z-index issue

--- a/src/components/Leading.css
+++ b/src/components/Leading.css
@@ -17,14 +17,14 @@
     background-color: rgba(0, 0, 0, 0.7) !important;
     height: 20% !important;
     background-size: contain !important;
-    z-index: 999;
+    z-index: 99;
   }
   .slick-prev {
     left: 0px !important;
     background-color: rgba(0, 0, 0, 0.7) !important;
     height: 20% !important;
     background-size: contain !important;
-    z-index: 999;
+    z-index: 99;
   }
 }
 @media screen and (max-width: 767px) {
